--- a/filem.html
+++ b/filem.html
@@ -16,14 +16,14 @@
         Файловые менеджеры
     </div>
     <div class="info">
-        <img src="/img/info.png" alt="" style="opacity: .7">
+        <img src="img/info.png" alt="" style="opacity: .7">
     </div>
     <div class="about_vm">
         <div class="lorem">Файловый менеджер — компьютерная программа, предоставляющая интерфейс пользователя для работы с файловой системой и файлами. </div>
     </div>
         <div class="wrap">
             <div class="informBlock">
-                <img src="/img/tc.png" alt="" class="product1">
+                <img src="img/tc.png" alt="" class="product1">
                 <h5 class="mainText">Total Commander</h5>
                 <div class="underlineBlock"></div>
                 <p class="secondText">Позволяет удобно копировать и перемещать файлы и папки, а также имеющий полезные инструменты и плагины для работы с файлами </p>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="informBlock">
-                <img src="/img/dero.png" alt="" class="product2">
+                <img src="img/dero.png" alt="" class="product2">
                 <h5 class="mainText">Directory Opus</h5>
                 <div class="underlineBlock"></div>
                 <p class="secondText">Коммерческий файловый менеджер. Выпущен в 1990 году как простой двухпанельный файловый менеджер для компьютеров Commodore AMIGA.</p>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="informBlock">
-                    <img src="/img/xyp.png" alt="" class="product3">
+                    <img src="img/xyp.png" alt="" class="product3">
                     <h5 class="mainText">XYplorer</h5>
                     <div class="underlineBlock"></div>
                     <p class="secondText">Это гибридный файловый менеджер, который сочетает в себе функции, найденные в навигационных и ортодоксальных файловых менеджерах.</p>
