--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,7 @@
                 <div class="header__logo">
                     <p>
                         <a href="content.html" target="d">
-                            <img src="/img/mgsulogo.png" alt="mgsu_logo">
+                            <img src="img/mgsulogo.png" alt="mgsu_logo">
                         </a>
                     </p>
                 </div>
