--- a/others.html
+++ b/others.html
@@ -14,7 +14,7 @@
 <body>
         <div class="wrap1">
             <div class="informBlock1">
-                <img src="/img/opersys.png" alt="" class="product1">
+                <img src="img/opersys.png" alt="" class="product1">
                 <h5 class="mainText1">Выбор ОС</h5>
                 <a href="#">
                 <button id="button-2" class="button">
@@ -24,7 +24,7 @@
             </div>
 
             <div class="informBlock1">
-                <img src="/img/hdd.png" alt="" class="product2">
+                <img src="img/hdd.png" alt="" class="product2">
                 <h5 class="mainText1">Разметка диска</h5>
                 <a href="#">
                     <button id="button-2" class="button">
@@ -34,7 +34,7 @@
             </div>
 
             <div class="informBlock1">
-                    <img src="/img/filea.png" alt="" class="product3">
+                    <img src="img/filea.png" alt="" class="product3">
                     <h5 class="mainText1">Справка</h5>
                     <a href="#">
                         <button id="button-2" class="button">
