--- a/virtmash.html
+++ b/virtmash.html
@@ -16,14 +16,14 @@
         Средства создания и управления виртуальными машинами и операционными средами
     </div>
     <div class="info">
-        <img src="/img/info.png" alt="" style="opacity: .7">
+        <img src="img/info.png" alt="" style="opacity: .7">
     </div>
     <div class="about_vm">
         <div class="lorem">Гипервизор — специализированная программа для создания виртуальных машин и управления ими. Для домашнего пользования есть бесплатные программы-гипервизоры с минимальным количеством настроек и функций. В бизнес-сфере используются более продвинутые решения, а некоторые гипервизоры и вовсе устанавливаются вместо операционной системы, чтобы сразу несколько мощных компьютеров можно было объединить в большой виртуальный хост. </div>
     </div>
         <div class="wrap">
             <div class="informBlock">
-                <img src="/img/oracle.png" alt="" class="product1">
+                <img src="img/oracle.png" alt="" class="product1">
                 <h5 class="mainText">Oracle VM VirtualBox</h5>
                 <div class="underlineBlock"></div>
                 <p class="secondText">Cамое популярное в мире кросс-платформенное программное обеспечение для виртуализации с открытым исходным кодом</p>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="informBlock">
-                <img src="/img/vmware.png" alt="" class="product2">
+                <img src="img/vmware.png" alt="" class="product2">
                 <h5 class="mainText">VMware Workstation Pro</h5>
                 <div class="underlineBlock"></div>
                 <p class="secondText">Гипервизор для настольных компьютеров, являющийся отраслевым стандартом, для работы с виртуальными машинами на ПК</p>
@@ -48,7 +48,7 @@
 
             <div class="informBlock">
                 <div class="dop">
-                    <img src="/img/qemu.png" alt="" class="product3">
+                    <img src="img/qemu.png" alt="" class="product3">
                     <h5 class="mainText">Qemu</h5>
                     <div class="underlineBlock"></div>
                     <p class="secondText">Свободная программа с открытым исходным кодом для эмуляции аппаратного обеспечения различных платформ. </p>
