--- a/cel.html
+++ b/cel.html
@@ -16,7 +16,7 @@
         <div class="contain">
             <div class="header__inner">
                 <div class="header__logo">
-                    <img src="/img/mgsulogo.png" alt="">
+                    <img src="img/mgsulogo.png" alt="">
                 </div>
                 <nav class="nav">
                     <a href="#" class="nav__link">Создание и управление виртуальными машиными</a>
