--- a/diagn.html
+++ b/diagn.html
@@ -16,14 +16,14 @@
         Средства диагностики, контроля и мониторинга системы
     </div>
     <div class="info">
-        <img src="/img/info.png" alt="" style="opacity: .7">
+        <img src="img/info.png" alt="" style="opacity: .7">
     </div>
     <div class="about_vm">
         <div class="lorem">Средства диагностики, контроля и мониторинга системы — мониторинг стабильности системы, позволяет отслеживать любые изменения в производительности компьютера </div>
     </div>
         <div class="wrap">
             <div class="informBlock">
-                <img src="/img/aida.png" alt="" class="product1">
+                <img src="img/aida.png" alt="" class="product1">
                 <h5 class="mainText">AIDA64</h5>
                 <div class="underlineBlock"></div>
                 <p class="secondText">Набор инструментов для Windows, предназначенный для диагностики, тестирования и мониторинга за состоянием компьютера.</p>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="informBlock">
-                <img src="/img/cpu.png" alt="" class="product2">
+                <img src="img/cpu.png" alt="" class="product2">
                 <h5 class="mainText">CPUID HWMonitor</h5>
                 <div class="underlineBlock"></div>
                 <p class="secondText"> Полезная для любого пользователя легковесная утилита для мониторинга состояния всей системы в целом и отдельных устройств в частности.</p>
@@ -47,7 +47,7 @@
             </div>
 
             <div class="informBlock">
-                    <img src="/img/msy.png" alt="" class="product3">
+                    <img src="img/msy.png" alt="" class="product3">
                     <h5 class="mainText">Microsoft Sysinternals</h5>
                     <div class="underlineBlock"></div>
                     <p class="secondText">Это единый архив утилит Sysinternals Utilities Марка Руссиновича для восстановления, настройки и мониторинга ОС семейства Windows.</p>
